--- a/phptest/style/style.css
+++ b/phptest/style/style.css
@@ -46,4 +46,8 @@ body {
   background: rgb(191, 31, 116);
   height: 25px;
   border-radius: 10px;
+  cursor: pointer;
+  transition: all 2s;
 }
+
+/* home */
