--- a/phptest2/style/style.css
+++ b/phptest2/style/style.css
@@ -33,6 +33,8 @@ body {
   font-size: 25px;
   padding-bottom: 15px;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
 }
 .form-box form .field {
   display: flex;
